# qcad

./: .gitignore  CMakeLists.txt
src/core/: CMakeLists.txt  RPluginLoader.cpp  RSettings.cpp
src/customwidgets/: CMakeLists.txt
src/entity/: CMakeLists.txt
src/grid/: CMakeLists.txt
src/gui/: CMakeLists.txt
src/io/dxf/: CMakeLists.txt
src/operations/: CMakeLists.txt
src/run/: CMakeInclude.txt  CMakeLists.txt  main.cpp
src/scripts/: CMakeLists.txt
src/snap/: CMakeLists.txt
src/spatialindex/: CMakeLists.txt
src/stemmer/: CMakeLists.txt
